fixing footer
tried editing the footer fonts, but something got messed up, will fix now

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -10,7 +10,7 @@
 .container .footer-text{
 margin: 20px 0;
 font-family: 'Script';
-	  font-size: 20px;
+	  font-size: 17px;
 }
 .badge{
 	background-color : #94D6B7;
