--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,7 +47,17 @@
 	
 	
 }
-
+.footer {
+      font-family: 'Script';
+	  font-size: 20px;
+	  font-weight: bold-italic;
+	  background-color:#E3E4E2;
+      bottom:0;
+	  padding-top: 210px;
+	  width: 100%;
+	  font-variant: small-caps;
+	  
+    }
     
 .btn-custom{
 	background-color: #94D6B7;
